--- a/WebApplication2/Views/Category/Details.cshtml
+++ b/WebApplication2/Views/Category/Details.cshtml
@@ -199,17 +199,25 @@ f
         color: #6f42c1;
     }
 
+    .banner-item-1 {
+        padding: 50px 0px;
+        background-position: center center;
+    }
+
 
 </style>
-<!-- Page Content -->
-@* <div class="banner header-text">
+
+
+<div class="banner header-text">
     <div class="owl-banner owl-carousel">
+        <div class="banner-item-1">
+        </div>
     </div>
-</div> *@
+</div>
 <!-- BEGIN SEARCH RESULTf -->
-<div class="col-md-12 my-3">
-    <div class="grid search">
-        <div class="grid-body">
+<div class="col-md-12 my-3" >
+
+    
             <div class="row">
                 <div class="col-md-3">
                     <div class="container">
@@ -222,20 +230,11 @@ f
                             </div>
                         }
 
-                       @*  <div class="container-fluid">
-                            <a class="newlink" >Subcategory  </a>
-                        </div>
-                        <div class="container-fluid">
-                            <a class="newlink" >Subcategory  </a>
-                        </div>
-                        <div class="container-fluid">
-                            <a class="newlink" >Subcategory  </a>
-                        </div> *@
 
                     </div>
                 </div>
                 <div class="col-lg-9">
-                    <div class="row mb-4">
+@*                     <div class="row mb-4">
                         <div class="col-md-6">
                             <button class="btn btn-light">
                                 Filter <span id="filter-count">0</span>
@@ -251,7 +250,7 @@ f
                                class="btn btn-link text-purple d-none"
                                id="clear-filters">Clear filters</a>
                         </div>
-                    </div>
+                    </div> *@
                     <h2 id="results-count">5,296 results</h2>
                     <div id="course-list">
 
@@ -294,14 +293,6 @@ f
                                                 }
 
 
-
-
-
-
-
-
-
-
                                             }
                                         (3, 666)
                                     </p>
@@ -325,95 +316,6 @@ f
                         }
 
 
-
-                        @*                   <div class="result-item">
-                        <img
-                        src="https://via.placeholder.com/150x100"
-                        alt="Course Thumbnail" />
-                        <div class="content">
-                        <h3>ASP.NET Core 8 (.NET 8) | True Ultimate Guide</h3>
-                        <p class="meta">
-                        @*  ASP.NET Core 6, 7 & 8 | ASP.NET Core Projects |
-                        Bootcamp | Advanced | Interview Questions | Web API |
-                        MVC
-
-                        </p>
-                        <p class="meta">
-                        Web University by Harsha Vardhan <br />
-                        4.6 <i class="fa fa-star"></i
-                        ><i class="fa fa-star"></i
-                        ><i class="fa fa-star"></i
-                        ><i class="fa fa-star"></i
-                        ><i class="fa fa-star-half-alt"></i> (3,666)
-                        </p>
-                        <p class="meta">
-                        @* 82 total hours • 402 lectures • All Levels
-
-                        </p>
-                        <p class="price">
-
-                        </p>
-                        </div>
-                        </div>
-                        <div class="result-item">
-                        <img
-                        src="~/images/courses/04cb9edd-fc4d-47d3-b84f-19279d765226_Screenshot (32).png"
-                        alt="Course Thumbnail" />
-                        <div class="content">
-                        <h3>
-                        .NET Core MVC - The Complete Guide 2024 [E-commerce]
-                        [.NET8]
-
-                        </h3>
-                        <p class="meta">
-                        Build real world e-commerce application using ASP.NET
-                        Core MVC, Entity Framework Core and ASP.NET Core
-                        Identity.
-                        </p>
-                        <p class="meta">
-                        Bhargav Patel <br />
-                        4.6 <i class="fa fa-star"></i
-                        ><i class="fa fa-star"></i
-                        ><i class="fa fa-star"></i
-                        ><i class="fa fa-star"></i
-                        ><i class="fa fa-star-half-alt"></i> (15,431)
-                        </p>
-                        <p class="meta">
-                        17 total hours • 218 lectures • Intermediate
-                        </p>
-                        <p class="price">
-                        $74.99
-                        <span class="badge badge-warning">Bestseller</span>
-                        </p>
-                        </div>
-                        </div>
-                        <div class="result-item">
-                        <img src="Screenshot (18).png" alt="Course Thumbnail" />
-                        <div class="content">
-                        <h3>
-                        Build ASP.NET Core Web API - Scratch To Finish (.NET8
-                        API)
-                        </h3>
-                        <p class="meta">
-                        Use C# and Build an ASP.NET Core Web API with Entity
-                        Framework Core, SQL Server, Authentication,
-                        Authorization | .NET8
-                        </p>
-                        <p class="meta">
-                        Sameer Saini <br />
-                        4.6 <i class="fa fa-star"></i
-                        ><i class="fa fa-star"></i
-                        ><i class="fa fa-star"></i
-                        ><i class="fa fa-star"></i
-                        ><i class="fa fa-star-half-alt"></i> (4,830)
-                        </p>
-                        <p class="meta">
-                        18 total hours • 185 lectures • All Levels
-                        </p>
-                        <p class="price">$69.99</p>
-                        </div>
-                        </div> *@
-                        <!-- Add more course items as needed -->
                     </div>
                     
                 </div>
@@ -447,66 +349,17 @@ f
 
 
 
-                    </div>
-                </div>
-                @*                          <footer class="footer_area section_gap_top">
-                <div class="container">
-                <div class="row single-footer-widget">
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                <div class="copy_right_text">
-                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                All Copyrights &copy reserved
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                </div>
-                </div>
-                <div class="col-md-4">
-                <div class="left-content">
-                <ul class="social-icons">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                </ul>
                 </div>
                 </div>
                 </div>
                 </div>
-                </footer>
+             
+          
 
-
-                </div>
-                </div>
-                </div>
-                </div>
-                <!-- END SEARCH RESULT -->
-
-
-
-                <!-- Bootstrap core JavaScript -->
-                <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-                <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-                <script src="~/lib/jquery/dist/jquery.js"></script>
-                <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
-
-                <!-- Additional Scripts -->
-                <script src="~/js/site.js"></script>
-                <script src="~/js/site1.js"></script>
-                <script src="~/js/site2.js"></script>
-                <script src="~/js/site3.js"></script>
-                <script src="~/js/site4.js"></script>
-
-                <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> *@
-                <script>
-                    $('.btn').click(function () {
-                        $('.collapse-content').toggle();
-                    });
-                </script>
-                @*   </body>
-
-
-                </html>
-                *@
-
-
+      @section Scripts{
+    <script>
+        $('.btn').click(function () {
+            $('.collapse-content').toggle();
+        });
+    </script>
+      }                                    
