--- a/WebApplication2/Views/Admin/Course.cshtml
+++ b/WebApplication2/Views/Admin/Course.cshtml
@@ -48,7 +48,7 @@
     .small {
         font-size: 0.875em;
     }
-    @@media (max-width: 768px) {
+   /*  @@media (max-width: 768px) {
     #course-list table thead {
         display: none;
     }
@@ -66,7 +66,7 @@
     #course-list table tbody td::before {
         content: attr(data-label);
         font-weight: bold;
-    }
+    } */
 }
 
 
@@ -82,7 +82,7 @@
     <div class="page-breadcrumb">
         <div class="row align-items-center">
             <div class="col-5">
-                <h4 class="page-title">Course</h4>
+                <h4 class="page-title">Courses</h4>
 
             </div>
             <div class="col-7">
@@ -169,19 +169,36 @@
                                         <td data-label="Price Status">
                                             @if (course.PriceStatus is true)
                                             {
-                                                <span class="badge bg-success">Paid</span>
+                                                <span class="badge bg-secondary">Paid</span>
                                             }
                                             else
                                             {
-                                                <span class="badge bg-secondary">Free</span>
+                                                <span class="badge bg-success">Free</span>
                                             }
                                         </td>
                                         <td data-label="Status">@course.Claimed</td>
                                         <td data-label="Addition Date">@course.AddingDate</td>
                                         <td data-label="Actions">
-                                            <a href="@Url.Action("EditCourse", "Course", new { id = course.CourseId })" class="btn btn-light btn-action">Update</a>
-                                            <a href="@Url.Action("Delete", "Courses", new { id = course.CourseId })" class="btn btn-light btn-action" onclick="return confirm('Are you sure you want to delete this course?');">Delete</a>
-                                        </td>
+                                            <a href="@Url.Action("EditableDetails", "Course", new { id = course.CourseId })" class="btn btn-light btn-action">View</a>
+                                            @*      <a href="@Url.Action("Delete", "Courses", new { id = course.CourseId })" class="btn btn-light btn-action" onclick="return confirm('Are you sure you want to delete this course?');">Delete</a>
+                                        
+                                           <div class="dropdown">
+                                                <button class="btn btn-link p-0"
+                                                        type="button"
+                                                        id="dropdownMenuButton1"
+                                                        data-bs-toggle="dropdown"
+                                                        aria-haspopup="true"
+                                                        aria-expanded="false">
+                                                    <i class="fa fa-ellipsis-v"></i>
+                                                </button>
+                                                <div class="dropdown-menu dropdown-menu-right"
+                                                     aria-labelledby="dropdownMenuButton1">
+                                                 
+                                                    <a class="dropdown-item" asp-controller="Course" asp-action="EditableDetails" asp-route-Id="@course.CourseId">View</a>
+
+                                                </div>
+                                            </div> *@
+                                    </td>
                                     </tr>
                                 }
                             </tbody>
