--- a/WebApplication2/Views/Admin/Review.cshtml
+++ b/WebApplication2/Views/Admin/Review.cshtml
@@ -60,7 +60,7 @@
     <div class="page-breadcrumb">
         <div class="row align-items-center">
             <div class="col-5">
-                <h4 class="page-title">Dashboard</h4>
+                <h4 class="page-title">Reviews</h4>
 
             </div>
             <div class="col-7">
@@ -111,7 +111,7 @@
                         </div>
                         <!-- title -->
                     </div>
-                    <div id="course-list">
+                    <div id="course-list" class="table-responsive">
                         <table class="table table-striped">
                             <thead>
                                 <tr class="bg-light">
@@ -160,16 +160,31 @@
                                             </ul>
                                         </td>
                                         <td>@review.Course.Title</td>
-                                        <td>@review.RatingDate</td>
+                                        <td>@review.GetFormattedDate(review.RatingDate.Value)</td>
                                         <td>
-                                            <a href="@Url.Action("EditReview", "review", new { id = review.ReviewId })" class="btn btn-light btn-action">Update</a>
-                                            <a href="@Url.Action("Delete", "review", new { id = review.ReviewId })" class="btn btn-light btn-action" onclick="return confirm('Are you sure you want to delete this review?');">Delete</a>
+                                            <a href="@Url.Action("EditableDetails", "review", new { id = review.ReviewId })" class="btn btn-light btn-action">View</a>
+                                       @*      <div class="dropdown">
+                                                <button class="btn btn-link p-0"
+                                                        type="button"
+                                                        id="dropdownMenuButton1"
+                                                        data-bs-toggle="dropdown"
+                                                        aria-haspopup="true"
+                                                        aria-expanded="false">
+                                                    <i class="fa fa-ellipsis-v"></i>
+                                                </button>
+                                                <div class="dropdown-menu dropdown-menu-right"
+                                                     aria-labelledby="dropdownMenuButton1">
+                                                    <a class="dropdown-item" asp-controller="review" asp-action="editreview" asp-route-Id="@review.ReviewId">Update</a>
+                                                    <a class="dropdown-item" asp-controller="review" asp-action="delete" asp-route-Id="@review.ReviewId" onclick="return confirm('Are you sure you want to delete this review?');">Delete</a>
+                                                </div>
+                                            </div> *@
                                         </td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
                     </div>
+
                 </div>
             </div>
         </div>
