--- a/WebApplication2/Views/Admin/Report.cshtml
+++ b/WebApplication2/Views/Admin/Report.cshtml
@@ -134,15 +134,15 @@
                                     <th scope="col">Actions</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody> 
                                 @foreach (var report in Model)
                                 {
                                     <tr>
-                                        <td>@report.Student</td>
-                                        <td>@report.Review.Descritipn </td>
+                                          <td>@report.ReviewId</td>
+                                         <td>@report.Review.Descritipn </td>  
                                         <td>@report.Message</td>
-                                        <td>@report.ReportDate</td>
-                                        <td>
+                                          <td>@report.ReportDate</td>
+                                          <td>
                                             <div class="dropdown">
                                                 <button class="btn btn-link p-0"
                                                         type="button"
@@ -154,7 +154,7 @@
                                                 </button>
                                                 <div class="dropdown-menu dropdown-menu-right"
                                                      aria-labelledby="dropdownMenuButton1">
-                                                    <a class="dropdown-item" asp-controller="report" asp-action="editreport" asp-route-Id="@report.reportId">Update</a>
+                                                    <a class="dropdown-item" asp-controller="report" asp-action="editreport" asp-route-Id="@report.ReportId">Update</a>
                                                     <a class="dropdown-item" asp-controller="report" asp-action="delete" asp-route-Id="@report." onclick="return confirm('Are you sure you want to delete this report?');">Delete</a>
                                                 </div>
                                             </div>
@@ -189,8 +189,9 @@
 
 </div>
 
- @section Scripts{
-                                // Toggle "See More" functionality
+@section Scripts {
+                               
+ <script>
         $(".see-more").click(function () {
             const moreText = $(this).siblings(".more-text");
             if (moreText.is(":visible")) {
@@ -200,4 +201,5 @@
             }
             moreText.toggle();
         });
-                    }
+ </script>
+}
