--- a/WebApplication2/Views/Shared/_Admin1Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Admin1Layout.cshtml
@@ -287,6 +287,7 @@
     <script src="~/Admin/assets/libs/chartist/dist/chartist.min.js"></script>
     <script src="~/Admin/assets/libs/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.min.js"></script>
     <script src="~/Admin/dist/js/pages/dashboards/dashboard1.js"></script>
+        @RenderSection("Scripts", required: false)
     </div>
 </body>
 
