--- a/WebApplication2/Views/Admin/Report.cshtml
+++ b/WebApplication2/Views/Admin/Report.cshtml
@@ -1,5 +1,5 @@
-﻿@using static WebApplication2.ViewModels.PagenationViewModel
-@model PaginatedList<Report>
+﻿@* @using static WebApplication2.ViewModels.PagenationViewModel *@
+@model PaginatedListNew<Report>
 
 @{
     Layout = "_Admin1Layout";
