--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -344,7 +344,7 @@
                             <div class="course-card3">
 
                                 <strong>@review.Student</strong>
-                                <span class="text-muted small">@review.GetFormattedDate(review.RatingDate.Value)</span>
+                                <span class="text-muted small">@review.GetFormattedDate(review.RatingDate)</span>
                                 <ul style="color:red;">
 
 
